Fixing problem with overlapping names in darkness theme.

--- a/css/darkness.css
+++ b/css/darkness.css
@@ -155,6 +155,7 @@ input[type='text'] {
   font-weight: bold;
   font-style: italic;
   text-decoration: none;
+  display: block;
 }
 
 .tweet .footer {
